--- a/action.yml
+++ b/action.yml
@@ -8,16 +8,16 @@ runs:
     - name: Pr message test 
       id: pr_test
       #if: ${{ failure() && steps.pr_test.conclusion == 'failure' }}
-      # if: ${{ success() }}
       env:
-       PR_URL: "${{ github.event.pull_request.url }}"
+       PR_NUMBER: "${{ github.event.number }}"
+       GITHUB_TOKEN: ${{ github.token }}
       run: |        
           curl \
           -X POST \
           -H "Accept: application/vnd.github+json" \
-          -H "Authorization: token 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" \
-          https://api.github.com/repos/Dayanandachari/Github_action_repo/issues/5/comments \
-          -d '{"body":"**PR Message Testing ** "}'
+          -H "Authorization: token $GITHUB_TOKEN " \
+          https://api.github.com/repos/Dayanandachari/Github_action_repo/issues/$PR_NUMBER/comments \
+          -d '{"body":"**Testing** 123"}'
       shell: bash
    
    
