--- a/action.yml
+++ b/action.yml
@@ -14,27 +14,38 @@ inputs:
   Message:
     description: pr message
     required: true
+    
+  GITHUB_TOKEN:
+    description: pr message
+    required: true
+  
 
+# runs:
+#   using: "composite"
+#   steps:
   
-  
-  
+#     - name: Pr message test 
+#       id: pr_test
+#       #if: ${{ failure() && steps.pr_test.conclusion == 'failure' }}
+#       env:
+#        GITHUB_TOKEN: ${{ github.token }}
+#       run: |        
+#           curl \
+#           -X POST \
+#           -H "Accept: application/vnd.github+json" \
+#           -H "Authorization: token $GITHUB_TOKEN " \
+#           https://api.github.com/repos/${{ inputs.Repo_owner }}/${{ inputs.Repo_name }}/issues/${{ inputs.PR_number}}/comments \
+#           -d '{"body":"${{inputs.Message }}"}'
+#       shell: bash
 
 runs:
-  using: "composite"
-  steps:
-  
-    - name: Pr message test 
-      id: pr_test
-      #if: ${{ failure() && steps.pr_test.conclusion == 'failure' }}
-      env:
-       GITHUB_TOKEN: ${{ github.token }}
-      run: |        
-          curl \
-          -X POST \
-          -H "Accept: application/vnd.github+json" \
-          -H "Authorization: token $GITHUB_TOKEN " \
-          https://api.github.com/repos/${{ inputs.Repo_owner }}/${{ inputs.Repo_name }}/issues/${{ inputs.PR_number}}/comments \
-          -d '{"body":"${{ inputs.Message }}"}'
-      shell: bash
-   
-   
+  using: 'docker'
+  image: 'Dockerfile'
+  args:
+    - ${{ github.token }}
+    - ${{ inputs.PR_number }}
+    - ${{ inputs.app_file }}
+    - ${{ inputs.Repo_owner }}
+    - ${{ inputs.Repo_name }}
+    - ${{ inputs.Message }}
+    
